--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.todolist">
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED">
 
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY">
+
+    </uses-permission>
+    
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_baseline_calendar_today_24"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoList">
+
         <activity
             android:name=".Splash_screen"
             android:exported="true">
@@ -22,6 +29,7 @@
             android:name=".MainActivity"
             android:exported="true">
         </activity>
+        <receiver android:name=".RemainderBroadcast"> </receiver>
     </application>
 
 
