--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.todolist">
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED">
 
-    </uses-permission>
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY">
 
     </uses-permission>
-    
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED">
+
+    </uses-permission>
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM">
+
+    </uses-permission>
+    <uses-permission android:name="android.permission.SET_ALARM">
+
+    </uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_baseline_calendar_today_24"
